# Paddle_Strike_Amethyst

./: .gitignore  Cargo.toml  README.md
resources/: display_config.ron  input.ron  input_controller.ron
resources/ui/: disclaimer.ron  loading_screen.ron
resources/ui/prefabs/: arcade_game_ui.ron  disclaimer.ron  main_menu.ron
src/: main.rs  render_graph.rs
src/components/: flashing_comp.rs  mod.rs  paddle_prefab.rs  ui_cursor_comp.rs  ui_cursor_movement_comp.rs  ui_cursor_option_comp.rs  ui_flashing_comp.rs  ui_glowing_comp.rs  ui_jumping_comp.rs  ui_swinging_comp.rs  ui_waving_comp.rs
src/mx_utils/: mod.rs  mx_timer.rs
src/resources/: audio.rs  mod.rs  ui_helper.rs  ui_prefab_registry.rs
src/states/: arcade_game_state.rs  disclaimer_state.rs  loading.rs  loading_state.rs  main_menu_state.rs  mod.rs  startup.rs  state_event.rs
src/systems/: loading_system.rs  mod.rs  ps_ui_bundle.rs  ui_cursor_system.rs  ui_flashing_system.rs  ui_glowing_system.rs  ui_jumping_system.rs  ui_main_menu_cursor_pos_system.rs  ui_swinging_system.rs  ui_waving_system.rs
